Added campus life info

--- a/MTU-webpage.html
+++ b/MTU-webpage.html
@@ -12,6 +12,9 @@
 		<main>
 			<h2>Address</h2>
 			<p>Rossa Ave, Bishopstown, Cork, T12 P928.</p>
+			<h2>Campus Life</h2>
+			<h3>Bishopstown Campus</h3>
+			<p>The Bishopstown Campus of MTU is the centre for courses in Business, Engineering, Technology, Science, Social Studies, Recreation & Leisure, Tourism & Hospitality Studies. Also located on the campus are Student Services, Administration, Research Centres and Industry Support Centre. The main campus of MTU is situated beside a Regional Sports Centre which includes a swimming pool. The grounds of the campus are spacious and well laid out. In addition to the sports areas there are extensive car and bicycle areas with maturing trees, and a riverside walk.</p>
 		</main>
 		<footer>
 			<p>Author: Yeap Heng Wei</p>
