Added career services info

--- a/MTU-webpage.html
+++ b/MTU-webpage.html
@@ -45,6 +45,8 @@
 			<p>MTU Cork offers 73 courses through the CAO. Forty-one of these are on the Honours Degree (Level 8) list. It's important to note in addition that there are thirty courses on the Bachelor Degree Level 7 list which have routes of progression to Honours Degree courses at MTU Cork.</p>
 			<h4>Student Friendly</h4>
 			<p>MTU Cork is one of the most highly rated higher education colleges in Ireland, both in terms of facilities and in the great student-staff relations.</p>
+			<h2>Careers Service</h2>
+			<p>Opening Hours: 8.30am-4.30pm, Monday to Friday / Location: 2nd Floor, Student Centre / Phone: +353 21 4326232 / Email: <a href="mailto:careerscork@mtu.ie">careerscork@mtu.ie</a></p>
 		</main>
 		<footer>
 			<p>Author: Yeap Heng Wei</p>
