Final commit of webpage and css file

--- a/MTU-webpage.html
+++ b/MTU-webpage.html
@@ -53,6 +53,7 @@
 		<footer>
 			<p>Author: Yeap Heng Wei</p>
 			<p>All rights reserved.</p>
+			<p>Contact: <a href="mailto:liverpoolmax@hotmail.com">liverpoolmax@hotmail.com</a></p>
 		</footer>
 	</body>
 </html>
